--- a/index.css
+++ b/index.css
@@ -1,7 +1,8 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
 * {
   margin: 0;
   padding: 0;
-  font-family: sans-serif;
+  font-family: "Poppins", sans-serif;
   box-sizing: border-box;
 }
 
@@ -13,22 +14,35 @@ body {
   align-items: center;
 }
 .container {
-  width: 450px;
-  height: 80vh;
+  width: 850px;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.2);
-  background-color: rgb(245, 188, 81);
+  /* background-color: rgb(245, 188, 81); */
 }
 .header h1 {
   color: white;
+  text-align: center;
+  background-color: orangered;
   padding: 15px;
 }
-.body {
-  flex: 1;
+.options {
+  /* flex: 1; */
+  height: 100vh;
   color: white;
-  background-color: rgba(0, 0, 0, 0.2);
+  background-color: rgba(228, 225, 225, 0.2);
   padding: 20px 30px;
+}
+.options ul {
+  display: flex;
+  list-style-type: none;
+}
+.options ul li {
+  margin-inline: 8px;
+}
+.options ul li button {
+  font-size: 15px;
 }
 .message {
   background-color: orange;
@@ -66,4 +80,120 @@ form button {
 form button:hover {
   background-color: rgb(132, 39, 6);
   transition: 0.2s ease;
+}
+.flex-container {
+  height: auto;
+  display: flex;
+  justify-content: center;
+}
+.flex-box {
+  position: relative;
+  width: 200px;
+  height: 200px;
+  text-align: center;
+  margin: 30px;
+  border-radius: 15px;
+  margin-inline: 10px;
+}
+.flex-box img {
+  width: 100%;
+  height: 100%;
+  border-radius: 7px;
+  object-fit: cover;
+  object-position: center;
+}
+.item-name {
+  position: absolute;
+  color: blue;
+  font-weight: 700;
+  font-size: 18px;
+  margin: 0 50px;
+}
+.price-tag {
+  font-weight: 100;
+  color: blue;
+  font-weight: 800;
+  font-size: small;
+  position: absolute;
+  bottom: 0;
+  margin: 10px 80px 0 80px;
+}
+.add-to-cart-text {
+  margin: 80px 0 80px 0;
+  color: white;
+  font-size: large;
+}
+.order-completed {
+  border: 5px solid green;
+  margin: 50px auto 0 auto;
+  text-align: center;
+  font-size: 55px;
+  color: green;
+  font-weight: bolder;
+  font-style: oblique;
+}
+.order-not-completed {
+  border: 5px solid red;
+  margin: 50px auto 0 auto;
+  font-size: 55px;
+  text-align: center;
+  color: red;
+  font-weight: bolder;
+  font-style: oblique;
+}
+/* .hidden {
+        display: none;
+      } */
+.current-order-msg {
+  border: 5px solid yellow;
+  text-align: center;
+  margin: 50px auto 0 auto;
+  font-size: 55px;
+  color: yellow;
+  font-weight: bolder;
+  font-style: oblique;
+}
+#order_section {
+  display: none;
+  justify-items: center;
+  align-items: center;
+  margin-top: 100px;
+  cursor: pointer;
+}
+#orders {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#orders td,
+#orders th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#orders tr:nth-child(even) {
+  background-color: #020000;
+}
+
+#orders tr:hover {
+  background-color: #ddd;
+}
+
+#orders th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: gold;
+  color: white;
+}
+button {
+  background-color: orange;
+  padding: 10px;
+  border: none;
+  border-radius: 8px;
+}
+button:disabled {
+  opacity: 0.5;
+  pointer-events: stroke;
 }
